<resources>
    <string name="app_name">GoAct_beta</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="home">home</string>
    <string name="map">map</string>
    <string name="post">post</string>
    <string name="user">user</string>
    <string name="settings">Settings</string>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="eventType">
        <item>Music</item>
        <item>Sport</item>
        <item>Work</item>
        <item>Community</item>
        <item>Other</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
