<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jason.goact_beta.MainActivity"
    xmlns:MainActivity="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_dash"
        android:icon="@drawable/home"
        android:showAsAction="always"
        android:title="@string/home"/>

    <item
        android:id="@+id/action_social"
        android:icon="@drawable/map"
        android:showAsAction="always"
        android:title="@string/map"/>

    <item
        android:id="@+id/action_messaging"
        android:icon="@drawable/post"
        android:showAsAction="always"
        android:title="@string/post"/>

    <item
        android:id="@+id/action_progress"
        android:icon="@drawable/user"
        android:showAsAction="always"
        android:title="@string/user"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:showAsAction="always"
        android:title="@string/settings"/>
</menu>
